fixing jdbc uri resolution and working with tests

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
 
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit-core</artifactId>
+      <version>${jackrabbit.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr2dav</artifactId>
       <version>${jackrabbit.version}</version>
       <scope>provided</scope>
