--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
+  <description>JDBC Driver for JCR Repository</description>
   <url>https://github.com/woonsan/jdbc-jcr</url>
 
   <properties>
