--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 
     <commons-io.version>2.4</commons-io.version>
     <junit.version>4.8.2</junit.version>
+    <easymock.version>3.4</easymock.version>
 
     <maven-source-plugin.version>2.4</maven-source-plugin.version>
     <maven-javadoc-plugin.version>2.10.2</maven-javadoc-plugin.version>
@@ -129,6 +130,12 @@
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymock</artifactId>
+      <version>${easymock.version}</version>
     </dependency>
 
   </dependencies>
